# nextjs-tauri

./: package-lock.json  package.json
pages/: index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  main.rs
